# log

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/log/: log.hpp
include/logger/: logger.hpp
src/: logger.cpp
test/: logger_test.cpp
